force-app/main/default/objects/InvalidPhoneEmail__mdt/InvalidPhoneEmail__mdt.object-meta.xml
<CustomObject>
    <label>InvalidPhoneEmail</label>
    <pluralLabel>InvalidPhoneEmail</pluralLabel>
</CustomObject>