force-app/main/default/objects/InvalidPhoneEmail__mdt/fields/FieldAPI__c.field-meta.xml
<CustomField>
    <fullName>FieldAPI__c</fullName>
    <label>FieldAPI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>