force-app/main/default/objects/InvalidPhoneEmail__mdt/fields/FieldNameParam__c.field-meta.xml
<CustomField>
    <fullName>FieldNameParam__c</fullName>
    <label>FieldNameParam</label>
    <length>80</length>
    <type>Text</type>
</CustomField>