force-app/main/default/objects/InvalidPhoneEmail__mdt/fields/ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI__c</fullName>
    <label>ObjectAPI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>