force-app/main/default/objects/InvalidPhoneEmail__mdt/fields/ObjectNameParam__c.field-meta.xml
<CustomField>
    <fullName>ObjectNameParam__c</fullName>
    <label>ObjectNameParam</label>
    <length>80</length>
    <type>Text</type>
</CustomField>